# ai-interview

./: HIRING_MANAGER_PROFILE_API.md  README.md
apps/backend/: package-lock.json  package.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: config.ts  index.ts
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: AgentQuestionsSection.tsx  AppShell.tsx  InterviewCreate.tsx  InterviewDashboard.tsx  InterviewResult.tsx  LatestResults.tsx  PreparingInterviewScreen.tsx  Profile.tsx  ProtectedRoute.tsx  (+4 more)
apps/ws-server/: .dockerignore  .gitignore  Dockerfile  dev.sh  pyproject.toml  requirements.txt
apps/ws-server/src/: audio_bufffer.py  constant.py  helper.py  main.py  open_ai_llm.py  speech_state.py  stt.py  tts_service.py  websocket_conn.py
apps/ws-server/src/__test__/: test_multi_user.py
apps/ws-server/src/agents/: base.py
apps/ws-server/src/agents/interview/: __init__.py  agent.py
apps/ws-server/src/core/: helper.py
apps/ws-server/src/interview_agent/: ai_brain.py  flow_manager.py  orchestrator.py  software_engineer.py
apps/ws-server/src/manager/: audio_manager.py  webrtc_audio_input.py
apps/ws-server/src/media/audio/: __init__.py  pipeline.py
apps/ws-server/src/media/video/: __init__.py  pipeline.py
apps/ws-server/src/services/redis/: __init__.py  client.py  event_emitter.py
apps/ws-server/src/session/: session.py
apps/ws-server/src/transport/: __init__.py  base.py  composite.py  webrtc_output.py  websocket.py
apps/ws-server/src/websocket/: webrtc_tts_track.py  websocket_conn.py
(+91 files in other folders)
